~ mobile top nav fix (black bar when menu is off-screen)

--- a/src/assets/toolkit/styles/6-components/_components.navigation.global.scss
+++ b/src/assets/toolkit/styles/6-components/_components.navigation.global.scss
@@ -14,7 +14,6 @@ $overlay-hint-offset: 5px; //can be a negative number as long as ($OH-size + $OH
 .menu-toggle {
   position:      relative;
   z-index:       1;
-  padding:       $base-spacing / 2 $base-spacing;
   background:    $black-victoria;
   border-bottom: 1px solid rgba( #FFF,.15 );
 
@@ -42,7 +41,6 @@ $overlay-hint-offset: 5px; //can be a negative number as long as ($OH-size + $OH
   right: 0;
   z-index: 100;
   font-weight: 300;
-  height: $base-spacing * 2;
 
   @include media( $tablet-and-bigger ){
       background: $green-bottle-green;
@@ -202,7 +200,6 @@ $overlay-hint-offset: 5px; //can be a negative number as long as ($OH-size + $OH
                 position: absolute;
                 right: 0;
                 z-index: 1;
-                width: 3rem;
             }
         }
 
